# scaling_emerging_evals

./: .gitignore  Makefile  README.md  WRITEUP.md  pyproject.toml
configs/: main_sweep.yaml
notebooks/: 01_scaling_curves.ipynb  02_prompt_diagnostics.ipynb
results/: SCHEMA.md
scripts/: generate_figures.py
src/sse/: results.py
src/sse/analysis/: __init__.py  curves.py  icl.py
src/sse/models/: __init__.py  pythia.py
src/sse/runners/: run_eval.py  sweep.py
src/sse/tasks/: __init__.py  arithmetic.py  base.py  factual_recall.py  icl.py  multiple_choice.py
tests/: test_arithmetic.py  test_curves.py  test_factual_recall.py  test_icl.py  test_imports.py  test_multiple_choice.py  test_pythia.py  test_results.py  test_runner.py  test_sweep.py  test_tasks.py  test_writeup.py
