[project]
name = "sse"
version = "0.1.0"
description = "Scaling & Emergence Evals — evaluate emergent capabilities in language models across scales"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "transformers",
    "accelerate",
    "datasets",
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "pyyaml",
    "tqdm",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sse"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
